--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Protest+Guerrilla&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Marcellus&family=Orbitron:wght@400..900&family=Protest+Guerrilla&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
